--- a/src/app/component/left-nav/left-nav.component.html
+++ b/src/app/component/left-nav/left-nav.component.html
@@ -1,6 +1,6 @@
 <div>
   <button mat-button class="menu-button" (click)="setContent(ContentEnum.HOME)">
-    <span>Home</span>
+    <span>Aktualności</span>
   </button>
   <button mat-button class="menu-button" (click)="setContent(ContentEnum.EMPLOYEE)">
     <span>Współpracownicy</span>
