--- a/src/app/component/content/content-employee/content-employee.component.html
+++ b/src/app/component/content/content-employee/content-employee.component.html
@@ -1,1 +1,22 @@
-<p>content-employee works!</p>
+<div *ngIf="employees$ | async as employees">
+  <p>content-home works!</p>
+
+  <div *ngIf="!employees.length">
+    <p> no employees to display !</p>
+  </div>
+
+  <div *ngIf="employees.length" class="card-list" >
+    <mat-card *ngFor="let card of employees" class="card-item">
+      <mat-card-header>
+        <mat-card-title>{{ card.email }}</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        {{ card.firstName }}
+        {{ card.lastName }}
+        {{ card.title }}
+        {{ card.phoneNumber }}
+      </mat-card-content>
+    </mat-card>
+  </div>
+
+</div>
