--- a/src/app/component/content/content-home/content-home.component.html
+++ b/src/app/component/content/content-home/content-home.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="posts$ | async as posts">
-  <p>content-employee works!</p>
+  <p>content-home works!</p>
 
   <div *ngIf="!posts.length">
      <p> no posts to display !</p>
