--- a/src/app/component/content/content-document/content-document.component.html
+++ b/src/app/component/content/content-document/content-document.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="documents$ | async as documents">
-  <p>content-home works!</p>
+  <p>content-document works!</p>
 
   <div *ngIf="!documents.length">
     <p> no documents to display !</p>
@@ -8,7 +8,9 @@
   <div *ngIf="documents.length" class="card-list" >
     <mat-card *ngFor="let card of documents" class="card-item">
       <mat-card-header>
-        <mat-card-title>{{ card.fileName }}</mat-card-title>
+        <mat-card-title>
+          <p (click)="getDocumentData(card.fileName)">{{ card.fileName }} </p>
+        </mat-card-title>
       </mat-card-header>
       <mat-card-content>
         {{ card.creator }}
