feature_6 display duties from backend

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,9 @@
       </div>
     </mat-sidenav-content>
 
-    <mat-sidenav mode="side" opened="true" class="mat-elevation-z8"  position="end"> lalala </mat-sidenav>
+    <mat-sidenav mode="side" opened="true" class="mat-elevation-z8"  position="end">
+      <app-duty/>
+    </mat-sidenav>
   </mat-sidenav-container>
 </div>
 
