--- a/src/app/component/right-nav/duty/duty.component.html
+++ b/src/app/component/right-nav/duty/duty.component.html
@@ -1,6 +1,5 @@
 <div *ngIf="duties$ | async as duties">
-  <p>content-duties works!</p>
-
+  Dyżury:
   <div *ngIf="!duties.length">
     <p> no duties to display !</p>
   </div>
@@ -10,13 +9,13 @@
       <mat-card-header>
         <mat-card-title>{{ type }}</mat-card-title>
       </mat-card-header>
-      <mat-card *ngFor="let card of duties | filterDuty : type" >
-        <mat-card-header>
-          <mat-card-title>{{ card.who }}</mat-card-title>
-        </mat-card-header>
+      <mat-card *ngFor="let card of duties | filterDuty : type" class="duty-card" >
         <mat-card-content>
-          {{ card.startTime }}
-          {{ card.endTime }}
+          {{ card.who }}
+          <div>
+            {{ card.startTime }} -
+            {{ card.endTime }}
+          </div>
         </mat-card-content>
       </mat-card>
     </mat-card>
