--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+
+.my-custom-calendar .mwl-calendar-month-cell {
+  min-height: 50px !important; /* Use !important to ensure your style takes precedence */
+}
