feature_7 display calendar - fix view

--- a/src/app/component/right-nav/calendar/calendar.component.css
+++ b/src/app/component/right-nav/calendar/calendar.component.css
@@ -1,7 +1,3 @@
 .right-calendar {
-  color: black !important;
-}
-
-.mwl-calendar-month-cell {
-  min-height: 50px;
+  color: #262b2f !important;
 }
