feature_9 log user, display auth loged

--- a/src/app/component/header/header.component.css
+++ b/src/app/component/header/header.component.css
@@ -1,4 +1,11 @@
 div {
   font-size: 19px;
-  margin: 4px
+  margin: 4px;
+}
+
+.right-side-header {
+  margin-left: -54px;
+  text-align: right;
+  position: fixed;
+  width: 100%;
 }
