--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,7 +1,10 @@
-<div class="left-side-header">
-  <span>Intranety, </span>
-  <ng-content select="[tab]"/>
-</div>
-<div>
-  <ng-content select="[user]"/>
+<div style="display: inline-flex">
+  <div class="left-side-header">
+    <span>Intranety, </span>
+    <ng-content select="[tab]"/>
+  </div>
+
+  <div class="right-side-header">
+    <ng-content select="[user]"/>
+  </div>
 </div>
