--- a/src/app/component/main-page/main-page.component.html
+++ b/src/app/component/main-page/main-page.component.html
@@ -2,7 +2,7 @@
   <mat-toolbar>
     <app-header>
       <span tab> {{contentType | ContentTabDisplay}} </span>
-      <span user> </span>
+      <span user> {{authenticatedUserName}} </span>
     </app-header>
   </mat-toolbar>
 
@@ -13,9 +13,9 @@
 
     <mat-sidenav-content>
       <div class="content">
-        <app-content-home *ngIf="contentType === ContentEnum.HOME" />
-        <app-content-employee *ngIf="contentType === ContentEnum.EMPLOYEE" />
-        <app-content-document *ngIf="contentType === ContentEnum.DOCUMENT" />
+        <app-content-home *ngIf="contentType === contentEnum.HOME" />
+        <app-content-employee *ngIf="contentType === contentEnum.EMPLOYEE" />
+        <app-content-document *ngIf="contentType === contentEnum.DOCUMENT" />
       </div>
     </mat-sidenav-content>
 
