--- a/src/app/component/content/content-document/content-document.component.css
+++ b/src/app/component/content/content-document/content-document.component.css
@@ -1,10 +1,18 @@
-.card-list {
-  display: flex;
-  flex-direction: column;
-  align-items: center; /* Center the cards horizontally */
+mat-list-item:nth-child(odd) {
+  background-color: #ebf4fc; /* Change this to your desired background color */
 }
 
-.card-item {
-  margin-bottom: 16px; /* Add spacing between cards */
-  width: 300px; /* Adjust the card width as needed */
+:host {
+  display: flex;
+  flex-direction: column;
+  width: 85%; /* Make the parent component take up 100% of available space */
+}
+
+.stylize-center-item {
+  margin: 0;
+  font-style: oblique;
+}
+
+.button-row {
+  margin: 5px 0 5px 0;
 }
