--- a/src/app/component/content/content-document/content-document.component.css
+++ b/src/app/component/content/content-document/content-document.component.css
@@ -15,4 +15,12 @@ mat-list-item:nth-child(odd) {
 
 .button-row {
   margin: 5px 0 5px 0;
+  display: flex;
+  align-items: center;
+}
+
+.center-align {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
