--- a/src/app/component/content/content-document/content-document.component.html
+++ b/src/app/component/content/content-document/content-document.component.html
@@ -6,7 +6,7 @@
   <section *ngIf="isUserAuthenticated">
     <div class="button-row"> 
       <button mat-raised-button color="primary" (click)="addGroup()" style="margin-left: 5px;">Nowa Grupa</button>
-      <button mat-raised-button color="primary" (click)="openDialogBox()" style="margin-left: 5px;">Sortowanie</button>
+      <button mat-raised-button color="primary" (click)="openDialogSorting()" style="margin-left: 5px;">Sortowanie</button>
     </div>
     <app-new-document-group [docTypes]="docTypes" (newDocumentGroupEvent)="addDocumentGroup($event)" />
     <mat-divider/>
@@ -21,10 +21,10 @@
         </button>
       </div>
       <div>
-        <button mat-icon-button >
+        <button mat-icon-button (click)="openDialogEdit(docType)">
           <mat-icon>edit</mat-icon>
         </button>
-        <button mat-icon-button >
+        <button mat-icon-button (click)="deleteGroup(docType)">
           <mat-icon>remove_circle_outline</mat-icon>
         </button>
       </div> 
