feature_13 add docs to groups

--- a/src/app/component/content/content-document/content-document.component.css
+++ b/src/app/component/content/content-document/content-document.component.css
@@ -24,3 +24,9 @@ mat-list-item:nth-child(odd) {
   justify-content: space-between;
   align-items: center;
 }
+
+.mat-icon { 
+  /* override angular class */
+  vertical-align: middle;
+}
+
