--- a/src/app/component/content/content-document/content-document.component.html
+++ b/src/app/component/content/content-document/content-document.component.html
@@ -36,7 +36,7 @@
       <mat-list-item *ngFor="let doc of documents | FilterDocument : docType.topic" (click)="getDocumentData(doc.fileName)">
         <h3 matListItemTitle style="font-weight: bold">{{ doc.fileName }} </h3>
         <p matListItemLine class="stylize-center-item"> {{doc.comment}}</p>
-        <p matListItemLine style="text-align: end"> {{(doc.creator?.length) ? (doc.creator + ',') : ('')}} {{doc.creationTime | date: 'yyyy-MM-dd'}} </p>
+        <p matListItemLine class="post-footer"> {{(doc.creator?.length) ? (doc.creator + ',') : ('')}} {{doc.creationTime | date: 'd/M/yyyy, H:mm'}} </p>
       </mat-list-item>
     </mat-nav-list>
   </div>
