--- a/src/app/component/content/content-document/new-document-dialog/new-document-dialog.component.html
+++ b/src/app/component/content/content-document/new-document-dialog/new-document-dialog.component.html
@@ -1,7 +1,7 @@
 <h2 mat-dialog-title>{{groupName}}, Dodawanie Dokumentów</h2>
 <mat-dialog-content class="mat-typography">
 
-<form [formGroup]="documentForm" (ngSubmit)="addGroup()">
+<form [formGroup]="documentForm">
 
     <mat-form-field style="min-width: 260px;">
         <mat-label>Nazwa dokumentu</mat-label>
