--- a/src/app/component/content/content-home/content-home.component.css
+++ b/src/app/component/content/content-home/content-home.component.css
@@ -1,10 +1,40 @@
-.card-list {
+.button-row {
+  margin: 5px 0 5px 0;
   display: flex;
-  flex-direction: column;
-  align-items: center; /* Center the cards horizontally */
+  align-items: center;
 }
 
-.card-item {
-  margin-bottom: 16px; /* Add spacing between cards */
-  width: 300px; /* Adjust the card width as needed */
+:host {
+  display: flex;
+  flex-direction: column;
+  width: 85%; /* Make the parent component take up 100% of available space */
+}
+
+
+.post-container {
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 20px;
+  margin-bottom: 20px;
+}
+
+.post-header {
+  font-size: 1.2em;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.post-content {
+  margin-bottom: 10px;
+}
+
+.post-footer {
+  font-size: 0.8em;
+  color: #888;
+}
+
+.center-align {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
