feature_14 edit, delete posts. Improve view of general page

--- a/src/app/component/content/content-document/content-document.component.css
+++ b/src/app/component/content/content-document/content-document.component.css
@@ -1,5 +1,5 @@
 mat-list-item:nth-child(odd) {
-  background-color: #ebf4fc; /* Change this to your desired background color */
+  background-color: #D2C4B6; /* Change this to your desired background color */
 }
 
 :host {
