--- a/src/app/component/main-page/main-page.component.css
+++ b/src/app/component/main-page/main-page.component.css
@@ -1,16 +1,22 @@
-.mat-sidenav {
-  margin: 16px;
+.sidenav {
+  border: 1px solid white;
   width: 200px;
-  border-right: none;
-  background: #002b5c;
+  background: #576E5E;
   color: white;
-  border-radius: 10px;
   padding: 16px;
   text-align: center;
 }
 
+.sidenav.left-sidenav {
+  width: 200px;
+}
+
+.sidenav.right-sidenav {
+  width: 400px;
+}
+
 mat-toolbar {
-  background: #006a9f;
+  background: #A89985;
   color: white;
 }
 
@@ -21,7 +27,7 @@ mat-toolbar {
   align-items: center;
 }
 
-mat-sidenav-container {
-  height: calc(100vh - 65px);
-}
 
+.mat-drawer-content {
+  overflow: hidden !important;
+}
