--- a/src/app/component/main-page/main-page.component.css
+++ b/src/app/component/main-page/main-page.component.css
@@ -27,6 +27,9 @@ mat-toolbar {
   align-items: center;
 }
 
+mat-sidenav-container {
+    min-height: calc(100vh - 65px);
+}
 
 .mat-drawer-content {
   overflow: hidden !important;
