--- a/src/app/component/content/content-employee/content-employee.component.css
+++ b/src/app/component/content/content-employee/content-employee.component.css
@@ -1,10 +1,48 @@
-.card-list {
+:host {
   display: flex;
   flex-direction: column;
-  align-items: center; /* Center the cards horizontally */
+  width: 85%; /* Make the parent component take up 100% of available space */
 }
 
-.card-item {
-  margin-bottom: 16px; /* Add spacing between cards */
-  width: 300px; /* Adjust the card width as needed */
+.major-emp {
+  border-left: 5px solid #D2C4B6;
+}
+
+.empty-space{
+  margin-left: 5px;
+}
+
+table {
+  width: 100%;
+}
+
+.row-emp-item {
+  display: flex;
+  align-items: center;
+  min-height: 50px;
+  position: relative;
+}
+
+.circle-with-text-gpt {
+  margin-left: 5px;
+  min-width: 45px;
+  min-height: 45px;
+  border-radius: 50%;
+  background-color: #576E5E; /* Change this color as needed */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.circle-with-text-gpt:hover {
+  background-color: #3D4D40; /* Change the hover color as needed */
+  cursor: pointer; /* Optional: Change cursor on hover */
+}
+
+.text-emp{
+  margin-left: 15px;
+  flex: 1 0 90%;
 }
