--- a/src/app/component/content/content-employee/content-employee.component.css
+++ b/src/app/component/content/content-employee/content-employee.component.css
@@ -4,6 +4,28 @@
   width: 85%; /* Make the parent component take up 100% of available space */
 }
 
+.flex-container{
+  width: 100%;
+  display: flex; 
+  justify-content: space-between;
+  align-items: center;
+}
+
+.button-row {
+  margin: 5px 0 5px 0;
+  display: flex;
+  align-items: center;
+}
+
+.filter-form {
+  display: inline-flex;
+  gap: 10px;
+}
+
+.filter-form-item {
+  height: 70px;
+}
+
 .major-emp {
   border-left: 5px solid #D2C4B6;
 }
